overflow quick fix

--- a/Frontend/portfolio-2022/src/style/style.scss
+++ b/Frontend/portfolio-2022/src/style/style.scss
@@ -161,7 +161,7 @@ header {
 
     .rotated-wrapper {
       overflow: hidden;
-      overflow-y: visible;
+      // overflow-y: visible;
       display: block;
       position: relative;
       height: $banner-height;
